# BubbleSortViz

./: README.md  app.py  pyproject.toml
.github/workflows/: github-actions-demo.yml
tests/: test_app.py
