[project]
name = "pythonsortingvisualizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.poetry]
name = "pythonsortingvisualizer"
version = "0.1.0"

# 👇 Tell poetry where the code is
packages = [
  { include = "bubblesortviz" }
]
